tp3 pratiquement fini (petit bug) + tp1 ragequit

--- a/WebGL_TP2/index.html
+++ b/WebGL_TP2/index.html
@@ -9,6 +9,8 @@
         <script type='text/javascript' src='three.min.js'></script>
         <script type='text/javascript' src='main.js'></script>
         <canvas id='webglCanvas' width='512' height='512'></canvas>
-		<p> <button id="indirecte">Indirecte</button> <button id="directe">Directe</button> </p>
+		<p> <button id="indirecte">Indirecte</button> 
+		<button id="directe">Directe</button> 
+		<button id="rotation">Rotation</button></p>
     </body>
 </html>
